--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ classifiers = [
 ]
 dependencies = [
     "requests>=2.32.3",
+    "boto3~=1.33.0",
+    "botocore~=1.33.0",
+    "pandas",
+    "pyarrow",
 ]
 
 [project.urls]
