--- a/utils/buildstock_releases.json
+++ b/utils/buildstock_releases.json
@@ -6,6 +6,10 @@
     "release_number": "1",
     "upgrade_ids": [
       "0"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "com_2021_tmy3_1": {
@@ -15,6 +19,10 @@
     "release_number": "1",
     "upgrade_ids": [
       "0"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "res_2021_amy2018_1": {
@@ -24,6 +32,10 @@
     "release_number": "1",
     "upgrade_ids": [
       "0"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "res_2021_tmy3_1": {
@@ -33,6 +45,10 @@
     "release_number": "1",
     "upgrade_ids": [
       "0"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "res_2022_amy2012_1.1": {
@@ -52,6 +68,10 @@
       "8",
       "9",
       "10"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "res_2022_amy2012_1": {
@@ -71,6 +91,10 @@
       "8",
       "9",
       "10"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "res_2022_amy2018_1.1": {
@@ -90,6 +114,10 @@
       "8",
       "9",
       "10"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "res_2022_amy2018_1": {
@@ -109,6 +137,10 @@
       "8",
       "9",
       "10"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "res_2022_tmy3_1.1": {
@@ -128,6 +160,10 @@
       "8",
       "9",
       "10"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "res_2022_tmy3_1": {
@@ -147,6 +183,10 @@
       "8",
       "9",
       "10"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "com_2023_amy2018_1": {
@@ -166,6 +206,10 @@
       "08",
       "09",
       "10"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "com_2023_amy2018_2": {
@@ -193,6 +237,10 @@
       "16",
       "17",
       "18"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "com_2024_amy2018_1": {
@@ -233,6 +281,10 @@
       "30",
       "31",
       "32"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "com_2024_amy2018_2": {
@@ -281,6 +333,10 @@
       "37",
       "38",
       "39"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "res_2024_amy2018_2": {
@@ -306,6 +362,10 @@
       "14",
       "15",
       "16"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "res_2024_tmy3_1": {
@@ -313,7 +373,10 @@
     "res_com": "resstock",
     "weather": "tmy3",
     "release_number": "1",
-    "upgrade_ids": []
+    "upgrade_ids": [],
+    "available_data": [
+      "metadata"
+    ]
   },
   "res_2024_tmy3_2": {
     "release_year": "2024",
@@ -338,6 +401,10 @@
       "14",
       "15",
       "16"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   },
   "com_2025_amy2018_1": {
@@ -404,6 +471,10 @@
       "55",
       "56",
       "57"
+    ],
+    "available_data": [
+      "building_energy_model",
+      "metadata"
     ]
   }
 }
