--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -35,7 +35,8 @@
             "extensions": [
                 "ms-python.python",
                 "quarto.quarto",
-                "nefrob.vscode-just-syntax"
+                "nefrob.vscode-just-syntax",
+                "tamasfe.even-better-toml"
             ],
             // Configure tool-specific settings.
             "settings": {
