WIP: Find what building energy model files are available

--- a/utils/buildstock_releases.json
+++ b/utils/buildstock_releases.json
@@ -8,8 +8,8 @@
       "0"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "com_2021_tmy3_1": {
@@ -21,8 +21,8 @@
       "0"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "res_2021_amy2018_1": {
@@ -34,8 +34,8 @@
       "0"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "res_2021_tmy3_1": {
@@ -47,8 +47,8 @@
       "0"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "res_2022_amy2012_1.1": {
@@ -70,8 +70,8 @@
       "10"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "res_2022_amy2012_1": {
@@ -93,8 +93,8 @@
       "10"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "res_2022_amy2018_1.1": {
@@ -116,8 +116,8 @@
       "10"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "res_2022_amy2018_1": {
@@ -139,8 +139,8 @@
       "10"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "res_2022_tmy3_1.1": {
@@ -162,8 +162,8 @@
       "10"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "res_2022_tmy3_1": {
@@ -185,8 +185,8 @@
       "10"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "com_2023_amy2018_1": {
@@ -208,8 +208,8 @@
       "10"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "com_2023_amy2018_2": {
@@ -239,8 +239,8 @@
       "18"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "com_2024_amy2018_1": {
@@ -283,8 +283,8 @@
       "32"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "com_2024_amy2018_2": {
@@ -335,8 +335,8 @@
       "39"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "res_2024_amy2018_2": {
@@ -364,8 +364,8 @@
       "16"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "res_2024_tmy3_1": {
@@ -403,8 +403,8 @@
       "16"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   },
   "com_2025_amy2018_1": {
@@ -473,8 +473,8 @@
       "57"
     ],
     "available_data": [
-      "building_energy_model",
-      "metadata"
+      "metadata",
+      "building_energy_model"
     ]
   }
 }
