--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "requests>=2.32.3",
     "boto3~=1.33.0",
     "botocore~=1.33.0",
-    "pyarrow",
+    "pyarrow>=14.0.1",
     "pandas>=2.2.3",
 ]
 
@@ -41,7 +41,8 @@ dev = [
     "mkdocs>=1.4.2",
     "mkdocs-material>=8.5.10",
     "mkdocstrings[python]>=0.26.1",
-    "types-requests>=2.32.0.20250602",
+    "types-requests>=2.31.0",
+    "types-boto3",
 ]
 
 [build-system]
