--- a/.github/ISSUE_TEMPLATE/switchbox-issue-template.yaml
+++ b/.github/ISSUE_TEMPLATE/switchbox-issue-template.yaml
@@ -1,22 +1,9 @@
 name: Switchbox ticket
 description: Help describe what you're building and why
-assignees: ["@me"]
+title: ""
 labels: []
-projects: ["Switchbox"]
+assignees: []
 body:
-  - type: dropdown
-    id: issue_type
-    attributes:
-      label: Issue Type
-      description: What type of issue is this?
-      options:
-        - Feature
-        - Bug
-        - Enhancement
-        - Documentation
-    validations:
-      required: true
-
   - type: textarea
     id: what
     attributes:
@@ -25,7 +12,7 @@ body:
       placeholder: "Example: Add a --filter flag that allows users to query ResStock data by building type, vintage, or geographic region."
     validations:
       required: true
-  
+
   - type: textarea
     id: why
     attributes:
@@ -34,7 +21,7 @@ body:
       placeholder: "Example: Users currently have to download the entire dataset and filter locally, which is slow and wastes bandwidth. This feature will make the tool much more efficient for analysts who only need specific subsets of the data."
     validations:
       required: true
-  
+
   - type: textarea
     id: how
     attributes:
@@ -43,7 +30,7 @@ body:
       placeholder: "Example: 1. Add argparse options for filter parameters, 2. Build query string construction logic, 3. Update API client to handle filtered requests, 4. Add unit tests for new functionality."
     validations:
       required: false
-  
+
   - type: textarea
     id: deliverables
     attributes:
