--- a/.github/ISSUE_TEMPLATE/switchbox-issue-template.yaml
+++ b/.github/ISSUE_TEMPLATE/switchbox-issue-template.yaml
@@ -1,6 +1,6 @@
 name: Switchbox ticket
 description: Help describe what you're building and why
-title: ""
+title: "Short, descriptive title here"
 labels: []
 assignees: []
 body:
