--- a/.github/ISSUE_TEMPLATE/switchbox-issue-template.yaml
+++ b/.github/ISSUE_TEMPLATE/switchbox-issue-template.yaml
@@ -1,6 +1,6 @@
 name: Feature/Bug Report
 description: Help describe what you're building and why
-title: ""
+title: "Short description of the 'What' here"
 labels: []
 assignees: []
 body:
