--- a/.github/ISSUE_TEMPLATE/switchbox-issue-template.yaml
+++ b/.github/ISSUE_TEMPLATE/switchbox-issue-template.yaml
@@ -1,4 +1,4 @@
-name: Feature/Bug Report
+name: Switchbox ticket
 description: Help describe what you're building and why
 title: "Short description of the 'What' here"
 labels: []
