--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ dependencies = [
     "requests>=2.32.3",
     "boto3~=1.33.0",
     "botocore~=1.33.0",
+    "typer>=0.9.0",
+    "rich>=13.9.5",
+    "questionary>=1.11.0",
 ]
 
 [project.urls]
