--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     "boto3~=1.33.0",
     "botocore~=1.33.0",
     "pyarrow>=14.0.1",
-    "pandas>=2.2.3",
+    "polars>=0.20.0",
 ]
 
 [project.urls]
