--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ dev = [
     "mkdocs-material>=8.5.10",
     "mkdocstrings[python]>=0.26.1",
     "types-requests>=2.31.0",
-    "types-boto3",
+    "types-boto3>=1.33.0",
 ]
 
 [build-system]
