--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,8 @@ classifiers = [
 ]
 dependencies = [
     "requests>=2.32.3",
-    "boto3~=1.33.0",
-    "botocore~=1.33.0",
+    "boto3>=1.33.0",
+    "botocore>=1.33.0",
     "pyarrow>=14.0.1",
     "polars>=0.20.0",
 ]
