--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,14 +49,14 @@ dev = [
 ]
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=45", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-py-modules = ["buildstock_fetch"]
+packages = ["buildstock_fetch", "utils"]
 
 [tool.setuptools.package-data]
-buildstock_fetch = ["utils/*.json", "utils/building_data/*.parquet"]
+utils = ["*.json", "building_data/*.parquet"]
 
 [tool.mypy]
 files = ["buildstock_fetch"]
