--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,10 +53,7 @@ requires = ["setuptools>=45", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["buildstock_fetch", "utils"]
-
-[tool.setuptools.package-data]
-utils = ["*.json", "building_data/*.parquet"]
+packages = ["buildstock_fetch"]
 
 [tool.mypy]
 files = ["buildstock_fetch"]
