--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,9 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools]
 packages = ["buildstock_fetch"]
 
+[tool.setuptools.package-data]
+"buildstock_fetch.utils" = ["*.json", "building_data/*.parquet"]
+
 [tool.mypy]
 files = ["buildstock_fetch"]
 disallow_untyped_defs = true
