Change interactive CLI name to bsf

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ Repository = "https://github.com/switchbox-data/buildstock-fetch"
 Documentation = "https://switchbox-data.github.io/buildstock-fetch/"
 
 [project.scripts]
-dbf = "buildstock_fetch.main_cli:app"
+bsf = "buildstock_fetch.main_cli:app"
 
 [dependency-groups]
 dev = [
