--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "buildstock-fetch"
-version = "0.0.1"
+version = "1.0a0"
 description = "This library simplifies downloading building characteristics and load curve data from NREL's ResStock and ComStock projects."
 authors = [{ name = "Switchbox", email = "bryan@switch.box" }]
 readme = "README.md"
