--- a/buildstock_fetch/utils/buildstock_releases.json
+++ b/buildstock_fetch/utils/buildstock_releases.json
@@ -8,10 +8,9 @@
       "0"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
       "load_curve_daily",
       "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
       "load_curve_15min"
     ]
@@ -25,10 +24,9 @@
       "0"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
       "load_curve_daily",
       "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
       "load_curve_15min"
     ]
@@ -42,10 +40,9 @@
       "0"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
       "load_curve_daily",
       "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
       "load_curve_15min"
     ]
@@ -59,10 +56,9 @@
       "0"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
       "load_curve_daily",
       "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
       "load_curve_15min"
     ]
@@ -86,14 +82,14 @@
       "10"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
-      "hpxml",
-      "schedule",
       "load_curve_daily",
-      "metadata",
       "load_curve_hourly",
-      "load_curve_15min"
+      "load_curve_monthly",
+      "schedule",
+      "metadata",
+      "load_curve_annual",
+      "load_curve_15min",
+      "hpxml"
     ]
   },
   "res_2022_amy2012_1": {
@@ -115,14 +111,14 @@
       "10"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
-      "hpxml",
-      "schedule",
       "load_curve_daily",
-      "metadata",
       "load_curve_hourly",
-      "load_curve_15min"
+      "load_curve_monthly",
+      "schedule",
+      "metadata",
+      "load_curve_annual",
+      "load_curve_15min",
+      "hpxml"
     ]
   },
   "res_2022_amy2018_1.1": {
@@ -144,14 +140,14 @@
       "10"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
-      "hpxml",
-      "schedule",
       "load_curve_daily",
-      "metadata",
       "load_curve_hourly",
-      "load_curve_15min"
+      "load_curve_monthly",
+      "schedule",
+      "metadata",
+      "load_curve_annual",
+      "load_curve_15min",
+      "hpxml"
     ]
   },
   "res_2022_amy2018_1": {
@@ -173,14 +169,14 @@
       "10"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
-      "hpxml",
-      "schedule",
       "load_curve_daily",
-      "metadata",
       "load_curve_hourly",
-      "load_curve_15min"
+      "load_curve_monthly",
+      "schedule",
+      "metadata",
+      "load_curve_annual",
+      "load_curve_15min",
+      "hpxml"
     ]
   },
   "res_2022_tmy3_1.1": {
@@ -202,14 +198,14 @@
       "10"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
-      "hpxml",
-      "schedule",
       "load_curve_daily",
-      "metadata",
       "load_curve_hourly",
-      "load_curve_15min"
+      "load_curve_monthly",
+      "schedule",
+      "metadata",
+      "load_curve_annual",
+      "load_curve_15min",
+      "hpxml"
     ]
   },
   "res_2022_tmy3_1": {
@@ -231,14 +227,14 @@
       "10"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
-      "hpxml",
-      "schedule",
       "load_curve_daily",
-      "metadata",
       "load_curve_hourly",
-      "load_curve_15min"
+      "load_curve_monthly",
+      "schedule",
+      "metadata",
+      "load_curve_annual",
+      "load_curve_15min",
+      "hpxml"
     ]
   },
   "com_2023_amy2018_1": {
@@ -260,11 +256,11 @@
       "10"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
       "load_curve_daily",
       "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
+      "load_curve_annual",
       "load_curve_15min"
     ]
   },
@@ -295,11 +291,11 @@
       "18"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
       "load_curve_daily",
       "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
+      "load_curve_annual",
       "load_curve_15min"
     ]
   },
@@ -343,11 +339,11 @@
       "32"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
       "load_curve_daily",
       "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
+      "load_curve_annual",
       "load_curve_15min"
     ]
   },
@@ -399,11 +395,11 @@
       "39"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
       "load_curve_daily",
       "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
+      "load_curve_annual",
       "load_curve_15min"
     ]
   },
@@ -432,11 +428,11 @@
       "16"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
       "load_curve_daily",
       "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
+      "load_curve_annual",
       "load_curve_15min"
     ]
   },
@@ -447,7 +443,8 @@
     "release_number": "1",
     "upgrade_ids": [],
     "available_data": [
-      "metadata"
+      "metadata",
+      "load_curve_annual"
     ]
   },
   "res_2024_tmy3_2": {
@@ -475,11 +472,11 @@
       "16"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
       "load_curve_daily",
       "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
+      "load_curve_annual",
       "load_curve_15min"
     ]
   },
@@ -549,12 +546,23 @@
       "57"
     ],
     "available_data": [
-      "load_curve_monthly",
-      "load_curve_annual",
       "load_curve_daily",
       "load_curve_hourly",
+      "load_curve_monthly",
       "metadata",
+      "load_curve_annual",
       "load_curve_15min"
+    ]
+  },
+  "com_2025_amy2018_2": {
+    "release_year": "2025",
+    "res_com": "comstock",
+    "weather": "amy2018",
+    "release_number": "2",
+    "upgrade_ids": [],
+    "available_data": [
+      "metadata",
+      "load_curve_annual"
     ]
   }
 }
